# khiin-rs-loover

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  README.zh-TW.md
app/frontend/: package-lock.json  package.json
app/frontend/src/lib/: Segmented.svelte  SettingsGroup.svelte  SettingsRow.svelte  ShortcutPolicy.js  ShortcutRecorder.svelte  Sidebar.svelte  Toast.svelte  Toggle.svelte  platform.ts  toast.ts
app/frontend/src/locales/: en.json  oan_Han.json  oan_Latn.json
app/frontend/src/routes/: +layout.svelte
app/frontend/tests/: ShortcutPolicy.test.js
app/src-tauri/: Cargo.toml  package-lock.json  tauri.conf.json
app/src-tauri/src/: main.rs
docs/superpowers/plans/: 2026-06-21-agents-bootstrap.md  2026-06-21-candidate-shortcut-labels.md  2026-06-21-database-migration-reliability.md  2026-06-22-mode-shortcut-validation.md
docs/superpowers/specs/: 2026-06-21-agents-bootstrap-design.md  2026-06-21-candidate-shortcut-labels-design.md  2026-06-21-database-migration-reliability-design.md  2026-06-22-mode-shortcut-validation-design.md
khiin/: Cargo.toml
khiin/src/db/: database.rs
swift/bridge/src/: lib.rs
swift/osx/: Package.swift  build.sh
swift/osx/Tests/: CandidateShortcutLabelTests.swift  LoneModifierTapTrackerTests.swift  ModeShortcutTests.swift
swift/osx/assets/scripts/: postinstall
swift/osx/src/: KhiinIMApp.swift
swift/osx/src/candidates/: CandidateShortcutLabel.swift  CandidateView.swift  InputController+window.swift
swift/osx/src/controller/: InputController.swift  (+1 more)
swift/shared/src/: EngineController.swift
(+8 files in other folders)
