[package]
name = "khiin_helper"
version = "0.3.4"
description = "Khíín Desktop Companion App"
authors = ["Ko An Ióng"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
khiin_settings.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = { version = "2" }
tauri-plugin-log = { version = "2" }
dirs = "5.0.1"
tauri-plugin-shell = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
